# hyperx-mic-lite

./: .gitattributes  .gitignore  Cargo.toml  HyperXMicLite.ps1  README.md  TODO.md  build.rs  hyperx-layout-export.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
captures/: 1-color-analysis.md  2-micgain-mode-analysis.md  3-sliders-analysis.md  4-wave-analysis.md  5-vu-analysis.md  6-9-final-captures-analysis.md  6-live-muted-lighting-analysis.md  7-save-solid-analysis.md  8-reset-default-analysis.md  9-startup-open-only-analysis.md
resources/: hyperx_messages.mc
src/: app.rs  audio.rs  com.rs  config.rs  config_cli.rs  constants.rs  diagnostics.rs  eventlog.rs  gui.rs  gui_widgets.rs  lib.rs  lighting.rs  logging.rs  logs.rs  main.rs  model.rs  mqtt.rs  paths.rs  service.rs  startup.rs  time.rs  tray.rs
src/gui/: audio_panel.rs  lighting_panel.rs  mic_stage.rs  mod.rs  mqtt_panel.rs  shell.rs
