[package]
name = "hyperx-mic-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
hidapi = { version = "2.6.6", default-features = false, features = ["windows-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_EventLog",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem"
] }
windows-service = "0.8.1"
winreg = "0.56.0"
