[package]
name = "hyperx-mic-lite"
version = "1.1.4-SNAPSHOT"
edition = "2024"

[dependencies]
cpal = "0.18.1"
eframe = "0.35.0"
hidapi = { version = "2.6.6", default-features = false, features = ["windows-native"] }
rfd = "0.15"
rumqttc = { version = "0.25.1", features = ["url", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem"
] }
windows-service = "0.8.1"
winreg = "0.56.0"
